--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency> 
+		<dependency>
+   			 <groupId>org.slf4j</groupId>
+   			 <artifactId>slf4j-nop</artifactId>
+    		<version>1.7.25</version>
+    		<scope>test</scope>
+		</dependency>
 		<!-- jfinal core -->
 		<dependency>
 			<groupId>com.jfinal</groupId>
