--- a/src/main/resources/web.xml.example
+++ b/src/main/resources/web.xml.example
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>ikaihuo</display-name>
+  <display-name>jf-app</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -14,7 +14,7 @@
     <filter-class>com.jfinal.core.JFinalFilter</filter-class>
     <init-param>
       <param-name>configClass</param-name>
-      <param-value>com.ikaihuo.config.iKaiHuoConfig</param-value>
+      <param-value>vip.e7du.config.AppConfig</param-value>
     </init-param>
   </filter>
   <filter-mapping>
