--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
    			 <groupId>org.slf4j</groupId>
    			 <artifactId>slf4j-nop</artifactId>
     		<version>1.7.25</version>
+			<scope>test</scope>
 		</dependency>
 		<!-- jfinal core -->
 		<dependency>
