add excel read and writer logic

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,19 @@
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
 		</dependency>
+		<!-- excel -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.17</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- test -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
