--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 		<commoncollections.version>3.2.2</commoncollections.version>
 		<fst.version>2.57</fst.version>
 		<guava.version>26.0-jre</guava.version>
+		<easyexcel.version>1.0.4</easyexcel.version>
 		<poi.version>3.17</poi.version>
 		<poiooxml.version>3.17</poiooxml.version>
 		<slf4jnop.version>1.7.25</slf4jnop.version>
@@ -144,6 +145,11 @@
 			<version>${guava.version}</version>
 		</dependency>
 		<!-- excel -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>easyexcel</artifactId>
+			<version>${easyexcel.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
