update excel logic

--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 		<commoncollections.version>3.2.2</commoncollections.version>
 		<fst.version>2.57</fst.version>
 		<guava.version>26.0-jre</guava.version>
-		<easyexcel.version>1.0.4</easyexcel.version>
+		<swift-poi-excel.version>0.0.1-SNAPSHOT</swift-poi-excel.version>
 		<poi.version>3.17</poi.version>
 		<poiooxml.version>3.17</poiooxml.version>
 		<slf4jnop.version>1.7.25</slf4jnop.version>
@@ -146,9 +146,9 @@
 		</dependency>
 		<!-- excel -->
 		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>easyexcel</artifactId>
-			<version>${easyexcel.version}</version>
+			<groupId>cn.zhucongqi</groupId>
+			<artifactId>swift-poi-excel</artifactId>
+			<version>${swift-poi-excel.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
