--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jfinal</groupId>
 	<artifactId>jfinal-ext3</artifactId>
-	<version>4.0.2-SNAPSHOT</version>
+	<version>4.0.2</version>
 	<packaging>jar</packaging>
 	<name>jfinal-ext3</name>
 	<description>jfinal-ext3</description>
@@ -48,7 +48,7 @@
 		<commoncollections.version>3.2.2</commoncollections.version>
 		<fst.version>2.57</fst.version>
 		<guava.version>26.0-jre</guava.version>
-		<swift-poi-excel.version>0.0.1-SNAPSHOT</swift-poi-excel.version>
+		<swift-poi-excel.version>1.0.1</swift-poi-excel.version>
 		<poi.version>3.17</poi.version>
 		<poiooxml.version>3.17</poiooxml.version>
 		<slf4jnop.version>1.7.25</slf4jnop.version>
